lm-sensors CHANGES file
-----------------------

SVN HEAD
  sensors.1: Add reference to sensors-detect
             Document -j option (json output)
  sensors: Add support for json output
  sensors-detect: Fix systemd paths
                  Add detection of Fintek F81768
                  Only probe I/O ports on x86
                  Add detection of Nuvoton NCT6793D
                  Add detection of Microchip MCP9808
                  Mark F71868A as supported by the f71882fg driver
                  Mark F81768D as supported by the f71882fg driver
                  Mark F81866D as supported by the f71882fg driver
                  Add detection of various ITE chips
                  Add detection of Nuvoton NCT6795D
                  Add detection of DDR4 SPD
                  Add detection of ITE IT8987D
                  Add detection of AMD Family 17h temperature sensors
                  Add detection of AMD KERNCZ SMBus controller
                  Add detection of various Intel SMBus controllers
                  Add detection of Giantec GT30TS00
                  Add detection of ONS CAT34TS02C and CAT34TS04
                  Add detection of AMD Family 15h Model 60+ temperature sensors
                  Add detection of Nuvoton NCT6796D
                  Add detection of AMD Family 15h Model 70+ temperature sensors
  configs: Add sample configuration files.
  sensors.conf.default: Add hardwired inputs of NCT6795D
  vt1211_pwm: replaced deprecated sub shell syntax
  pwmconfig: replaced deprecated sub shell syntax
  fancontrol: replaced deprecated sub shell syntax
  fancontrol.8: replaced deprecated sub shell syntax
  libsensors: Add support for SENSORS_BUS_TYPE_SCSI

3.4.0 (2015-06-25)
  documentation: Update the note about libsensors license
  sensors.conf.5: Enhance the hysteresis documentation
  sensors.conf.default: Add support for NCT6779 and NCT6791
  libsensors: Get rid of arbitrary limit on per-type sensor count