@@ -5,7 +5,8 @@ chip "w83627ehf-*" "w83627dhg-*"
     label in0 "VCore"
     label in1 "+12V"
     label in2 "AVCC"
-# ACPI <http://www.lm-sensors.org/wiki/AsusFormulaHacking> says nothing about AVCC, so you might want to uncomment:
+# ACPI <https://hwmon.wiki.kernel.org/asusformulahacking> says nothing
+# about AVCC, so you might want to uncomment:
 #ignore in2
     label in3 "+3.3V"
     ignore in4
