@@ -2,7 +2,7 @@
 
 
 # This is the sensors.conf configuration file for ASUS P5B-E (and maybe it's different versions)
-# Everythings based on the guide at http://www.lm-sensors.org/wiki/AsusFormulaHacking. The formulas
+# Everythings based on the guide at https://hwmon.wiki.kernel.org/asusformulahacking. The formulas
 # and ranges are based on the /proc/acpi/dsdt readings of a P5B-E board with a E6600 CPU.
 
 chip "w83627dhg-*"
