@@ -3,7 +3,7 @@
 
 # Linux sensor configuration for an Asus P5N32-E SLI Plus
 # 5/2007 s.urbanovski#ac-nancy-metz.fr
-# (see http://www.lm-sensors.org/wiki/AsusFormulaHacking)
+# (see https://hwmon.wiki.kernel.org/asusformulahacking)
 
 chip "w83791d-*"
 
