@@ -8,7 +8,7 @@
 # This custom configuration file should be copied to /etc/sensors.d/Biostar-N68S+.conf.
 #
 # Custom configuration files for some specific mainboards can be found at
-# http://www.lm-sensors.org/wiki/Configurations
+# https://github.com/lm-sensors/lm-sensors/tree/master/configs
 
 # READ THE MAN PAGE DOCUMENTATION OF 'sensors.conf' FOR MORE
 # COMPLETE INFORMATION. ie:
