@@ -10,7 +10,7 @@
 # from the lm-sensors mailinglist.
 
 # Questions, comments or additions? Please share on the lm-sensors mailinglist.
-# More info at http://www.lm-sensors.org/wiki/FeedbackAndSupport
+# More info at https://hwmon.wiki.kernel.org/feedbackandsupport
 
 # Hint: Use sensors -u to list all variables.
 http://lists.lm-sensors.org/pipermail/lm-sensors/2014-January/040952.html
