@@ -12,7 +12,7 @@ so hardware which isn't directly related to the development of a hardware
 monitoring driver, but can be used to build test systems, is welcome too.
 
 If you would like to make a donation, please contact us. See
-http://www.lm-sensors.org/wiki/AuthorsAndContributors. Thanks!
+https://hwmon.wiki.kernel.org/authorsandcontributors. Thanks!
 
 
 Donations are listed in chronological order. Note that the person mentioned
