@@ -286,5 +286,4 @@ sensors.conf(5)
 
 .SH AUTHOR
 Frodo Looijaard, Jean Delvare and others
-http://www.lm-sensors.org/
-
+https://hwmon.wiki.kernel.org/lm_sensors
