@@ -567,7 +567,4 @@ libsensors(3)
 
 .SH AUTHOR
 Frodo Looijaard and the lm_sensors group
-http://www.lm-sensors.org/
-
-
-
+https://hwmon.wiki.kernel.org/lm_sensors
