@@ -107,7 +107,7 @@ i2cdump(8), isaset(8)
 
 .SH AUTHOR
 Frodo Looijaard, Mark D. Studebaker, and the lm_sensors group
-(http://www.lm-sensors.org/)
+(https://hwmon.wiki.kernel.org/lm_sensors)
 .PP
 This manual page was originally written by David Z Maze <dmaze@debian.org> for
 the Debian GNU/Linux system. It was then reviewed and augmented by the lm_sensors
