@@ -77,7 +77,7 @@ i2cset(8), isadump(8)
 
 .SH AUTHOR
 Mark D. Studebaker, and the lm_sensors group
-(http://www.lm-sensors.org/)
+(https://hwmon.wiki.kernel.org/lm_sensors)
 .PP
 This manual page was shamelessly ripped from the i2cset and isadump manual
 pages by Jean Delvare.
