@@ -89,7 +89,7 @@ See also: <br>
 </P>
 
 This page generated with data and scripts from
-<a href="http://www.lm-sensors.org/">the lm_sensors project</a>;
+<a href="https://hwmon.wiki.kernel.org/lm_sensors">the lm_sensors project</a>;
 the data are stored in a Round Robin Database and
 the graphs are generated by
 <a href="http://oss.oetiker.ch/rrdtool/">
