@@ -93,6 +93,6 @@ sensors.conf(5), sensors-detect(8).
 
 .SH AUTHOR
 Frodo Looijaard and the lm_sensors group
-http://www.lm-sensors.org/
+https://hwmon.wiki.kernel.org/lm_sensors
 
 
